--- a/core/panel.css
+++ b/core/panel.css
@@ -20,6 +20,7 @@ body {
 	inset-inline: 0;
 	inset-block-start: 0;
 
+	padding-block-start: 1ch;
 	padding-inline-start: 1ch;
 
 	color: var(--vscode-editor-foreground);
@@ -32,25 +33,29 @@ body {
 	line-height: var(--39-line-height);
 }
 
-#banner > div {
-	padding-inline: 1ch;
-	padding-block-end: 1ch;
-
-	border-style: solid;
-	border-color: var(--vscode-editor-foreground);
-
-	border-inline-width: 0;
-	border-block-start-width: 0;
-
-	/*
-	 * Right operand's not unitless, but CSS doesn't give a damn.
-	 */
-	border-block-end-width: calc(var(--39-line-height) /
-				     var(--vscode-editor-font-size));
+#banner > :not(:last-child) {
+	margin-block-end: 1ch;
 }
 
-#banner p {
-	margin-block: 1ch;
+#heading {
+	display: flex;
+	justify-content: space-between;
+}
+
+#heading p[ role = 'heading' ][ aria-level = '1' ] {
+	margin-block: 0;
+	align-self: flex-end;
+}
+
+#button {
+	margin-inline-end: 2ch;
+
+	color: var(--vscode-editor-foreground);
+	background-color: var(--vscode-editor-background);
+}
+
+#heading svg {
+	padding-inline: 1ch;
 }
 
 #link-box {
@@ -66,10 +71,27 @@ body {
 }
 
 #canvas > div {
-	margin-block-start: 9ch;
+	margin-block-start: 11ch;
 	margin-inline-end: 1ch;
 }
 
 #canvas div {
 	width: min-content;
+}
+
+#banner > :last-child {
+	padding-inline: 1ch;
+	padding-block-end: 1ch;
+
+	border-style: solid;
+	border-color: var(--vscode-editor-foreground);
+
+	border-inline-width: 0;
+	border-block-start-width: 0;
+
+	/*
+	 * Right operand's not unitless, but CSS doesn't give a damn.
+	 */
+	border-block-end-width: calc(var(--39-line-height) /
+				     var(--vscode-editor-font-size));
 }
