dump: toggle line number display
Signed-off-by: Jiamu Sun <barroit@linux.com>

--- a/core/line.css
+++ b/core/line.css
@@ -3,7 +3,7 @@
  * Copyright 2025 Jiamu Sun <barroit@linux.com>
  */
 
-#codebox > *::before {
+#codebox:not(.line-number-disabled) > *::before {
 	content: attr(data-number);
 
 	padding-inline-end: 2ch;
