--- a/core/line.css
+++ b/core/line.css
@@ -3,10 +3,14 @@
  * Copyright 2025 Jiamu Sun <barroit@linux.com>
  */
 
-#codebox:not(.line-number-disabled) > *::before {
+#codebox:not(.line-number-disabled) > div::before {
 	content: attr(data-number);
 
 	padding-inline-end: 2ch;
 
 	color: var(--39-line-number-color);
+}
+
+#codebox > div.pad > span::before {
+	content: attr(data-padding);
 }
